--- a/PatientManagementProject/src/View/Login.form
+++ b/PatientManagementProject/src/View/Login.form
@@ -23,12 +23,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" min="-2" pref="667" max="-2" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="1" min="-2" pref="667" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" min="-2" pref="379" max="-2" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="1" min="-2" pref="379" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -201,14 +201,14 @@
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="txt_fName1" min="-2" pref="192" max="-2" attributes="0"/>
-                                          <Component id="txt_fName2" min="-2" pref="192" max="-2" attributes="0"/>
+                                          <Component id="txt_addressLineOne" min="-2" pref="192" max="-2" attributes="0"/>
+                                          <Component id="txt_city" min="-2" pref="192" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
                                       <Component id="lbl_userId8" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="txt_fName3" min="-2" pref="192" max="-2" attributes="0"/>
+                                      <Component id="txt_postCode" min="-2" pref="192" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
@@ -227,7 +227,7 @@
                           <Component id="txt_fName" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbl_userId1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                              <Component id="txt_fName1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txt_addressLineOne" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lbl_userId6" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -235,7 +235,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="txt_lName" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbl_userId2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txt_fName2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txt_city" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbl_userId7" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -243,7 +243,7 @@
                           <Component id="lbl_userId3" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="spn_age" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                              <Component id="txt_fName3" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txt_postCode" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lbl_userId8" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -353,9 +353,12 @@
                 <Property name="text" type="java.lang.String" value="Address Line 1"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txt_fName1">
+            <Component class="javax.swing.JTextField" name="txt_addressLineOne">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_addressLineOneActionPerformed"/>
+              </Events>
             </Component>
-            <Component class="javax.swing.JTextField" name="txt_fName2">
+            <Component class="javax.swing.JTextField" name="txt_city">
             </Component>
             <Component class="javax.swing.JLabel" name="lbl_userId7">
               <Properties>
@@ -373,7 +376,7 @@
                 <Property name="text" type="java.lang.String" value="Postcode"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txt_fName3">
+            <Component class="javax.swing.JTextField" name="txt_postCode">
             </Component>
           </SubComponents>
         </Container>
