--- a/PatientManagementProject/src/View/Login.form
+++ b/PatientManagementProject/src/View/Login.form
@@ -223,12 +223,14 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="lbl_loginTitle1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txt_fName" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbl_userId1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                               <Component id="txt_addressLineOne" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lbl_userId6" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="txt_fName" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="lbl_userId1" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -239,12 +241,14 @@
                           <Component id="lbl_userId7" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lbl_userId3" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="spn_age" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                               <Component id="txt_postCode" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lbl_userId8" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="lbl_userId3" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="spn_age" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
