--- a/PatientManagementProject/src/View/AdminView.form
+++ b/PatientManagementProject/src/View/AdminView.form
@@ -66,6 +66,7 @@
                           <Component id="txt_userToRemove" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
                           <Component id="btn_removeUser" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
                           <Component id="lbl_loginTitle" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="btn_logOut" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="36" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -102,7 +103,8 @@
                               <Component id="txt_userToRemove" min="-2" pref="35" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btn_removeUser" min="-2" pref="35" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="btn_logOut" min="-2" pref="35" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -201,6 +203,17 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Admin"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="btn_logOut">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Log Out"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_logOutActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
